style.css
html {
  background-color: #5682be;
  background-image: linear-gradient(135deg, #5682be 8%, #9455a6);
  font-family: 'Roboto', sans-serif;

  width: 100%;
  height: 100%;
}

body {
  width: 100%;
  height: 100%;
  max-height: 100vh;
  max-height: 100dvh;

  margin: 0;

  display: flex;
  flex-direction: column;
  justify-content: center;

  gap: 2em;

  background-color: #5682be;
  background-image: linear-gradient(135deg, #5682be 8%, #9455a6);
}

header > h1,
header > p {
  text-align: center;

  max-width: 40ch;

  margin: 0;
  margin-inline: auto;
  padding-inline: 2rem;

  color: white;
}

header > h1 {
  font-size: 40px;
  font-weight: 500;
}

header > p {
  color: #eaeaea;

  font-size: 18px;
  font-weight: 400;

  padding-top: 0.5em;
}

footer {
  color: #eaeaea;
  margin-inline: auto;

  font-size: 18px;
}

footer a {
  color: white;
  font-weight: 500;

  text-underline-offset: 0.15em;
}

.label-number-section {
  display: flex;
  justify-content: space-between;
}

.range-group {
  width: 20%;
  display: flex;
  flex-direction: column;
  row-gap: 0.5em;
  margin: 0 auto;
  margin-bottom: 3em;
}

.range-value {
  width: 5em;
  border: none;
}

/* Hiding number input arrows for Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Hiding number input arrows for Firefox */
input[type='number'] {
  -moz-appearance: textfield;
  color: grey;
}

.range-group label {
  font-size: 1.2rem;
}

.range-value:focus {
  outline: none;
}

.range-section {
  display: flex;
}

.range-section p {
  margin: 0;
  margin-top: 0.5em;
}

.range-wrap {
  width: 70%;
  position: relative;
  margin: 0 auto 3rem;
}
.range {
  width: 100%;
  border: 1px solid rgb(255, 255, 255);
  cursor: pointer;
}
.bubble {
  background: #151515;
  color: white;
  padding: 7px 12px;
  /* min-height: 29px; */
  position: absolute;
  border-radius: 4px;
  left: 50%;
  transform: translateX(-50%);
}
.bubble::after {
  content: '';
  position: absolute;
  width: 2px;
  height: 10px;
  background: #151515;
  top: -1px;
  left: 50%;
}

.display-none {
  display: none;
}

/*generated with Input range slider CSS style generator (version 20211225)
https://toughengineer.github.io/demo/slider-styler*/
input[type='range'].styled-slider {
  height: 2.2em;
  -webkit-appearance: none;
}

/*progress support*/
input[type='range'].styled-slider.slider-progress {
  --range: calc(var(--max) - var(--min));
  --ratio: calc((var(--value) - var(--min)) / var(--range));
  --sx: calc(0.5 * 1.6em + var(--ratio) * (100% - 1.6em));
}

input[type='range'].styled-slider:focus {
  outline: none;
}

/*webkit*/
input[type='range'].styled-slider::-webkit-slider-thumb {
  -webkit-appearance: none;
  width: 1.6em;
  height: 1.6em;
  border-radius: 1em;
  background: #2f58cd;
  border: 6px solid #fffefe;
  box-shadow: 0 0 2px black;
  margin-top: calc(max((0.8em - 1px - 1px) * 0.5, 0px) - max(1.6em * 0.5, 6px));
}

input[type='range'].styled-slider::-webkit-slider-runnable-track {
  height: 0.8em;
  border: 1px solid #b2b2b2;
  border-radius: 0.5em;
  background: #efefef;
  box-shadow: none;
}

input[type='range'].styled-slider::-webkit-slider-thumb:hover {
  background: #0061c3;
}

input[type='range'].styled-slider:hover::-webkit-slider-runnable-track {
  background: #e5e5e5;
  border-color: #9a9a9a;
}

input[type='range'].styled-slider:active::-webkit-slider-runnable-track {
  background: #f5f5f5;
  border-color: #c1c1c1;
}

input[type='range'].styled-slider.slider-progress::-webkit-slider-runnable-track {
  background: linear-gradient(to right, #3e2ab4, #87f0ff) 0 / var(--sx) 100%
      no-repeat,
    #efefef;
}

input[type='range'].styled-slider.slider-progress:hover::-webkit-slider-runnable-track {
  background: linear-gradient(to right, #3e2ab4, #87f0ff) 0 / var(--sx) 100%
      no-repeat,
    #e5e5e5;
}

input[type='range'].styled-slider.slider-progress:active::-webkit-slider-runnable-track {
  background: linear-gradient(to right, #3e2ab4, #87f0ff) 0 / var(--sx) 100%
      no-repeat,
    #f5f5f5;
}

/*mozilla*/
input[type='range'].styled-slider::-moz-range-thumb {
  width: max(calc(1.6em - 6px - 6px), 0px);
  height: max(calc(1.6em - 6px - 6px), 0px);
  border-radius: 1em;
  background: #2f58cd;
  border: 6px solid #fffefe;
  box-shadow: 0 0 2px black;
}

input[type='range'].styled-slider::-moz-range-track {
  height: max(calc(0.8em - 1px - 1px), 0px);
  border: 1px solid #b2b2b2;
  border-radius: 0.5em;
  background: #efefef;
  box-shadow: none;
}

input[type='range'].styled-slider::-moz-range-thumb:hover {
  background: #0061c3;
}

input[type='range'].styled-slider:hover::-moz-range-track {
  background: #e5e5e5;
  border-color: #9a9a9a;
}

input[type='range'].styled-slider:active::-moz-range-track {
  background: #f5f5f5;
  border-color: #c1c1c1;
}

input[type='range'].styled-slider.slider-progress::-moz-range-track {
  background: linear-gradient(to right, #3e2ab4, #87f0ff) 0 / var(--sx) 100%
      no-repeat,
    #efefef;
}

input[type='range'].styled-slider.slider-progress:hover::-moz-range-track {
  background: linear-gradient(to right, #3e2ab4, #87f0ff) 0 / var(--sx) 100%
      no-repeat,
    #e5e5e5;
}

input[type='range'].styled-slider.slider-progress:active::-moz-range-track {
  background: linear-gradient(to right, #3e2ab4, #87f0ff) 0 / var(--sx) 100%
      no-repeat,
    #f5f5f5;
}

/*ms*/
input[type='range'].styled-slider::-ms-fill-upper {
  background: transparent;
  border-color: transparent;
}

input[type='range'].styled-slider::-ms-fill-lower {
  background: transparent;
  border-color: transparent;
}

input[type='range'].styled-slider::-ms-thumb {
  width: 1.6em;
  height: 1.6em;
  border-radius: 1em;
  background: #2f58cd;
  border: 6px solid #fffefe;
  box-shadow: 0 0 2px black;
  margin-top: 0;
  box-sizing: border-box;
}

input[type='range'].styled-slider::-ms-track {
  height: 0.8em;
  border-radius: 0.5em;
  background: #efefef;
  border: 1px solid #b2b2b2;
  box-shadow: none;
  box-sizing: border-box;
}

input[type='range'].styled-slider::-ms-thumb:hover {
  background: #0061c3;
}

input[type='range'].styled-slider:hover::-ms-track {
  background: #e5e5e5;
  border-color: #9a9a9a;
}

input[type='range'].styled-slider:active::-ms-track {
  background: #f5f5f5;
  border-color: #c1c1c1;
}

input[type='range'].styled-slider.slider-progress::-ms-fill-lower {
  height: max(calc(0.8em - 1px - 1px), 0px);
  border-radius: 0.5em 0 0 0.5em;
  margin: -1px 0 -1px -1px;
  background: linear-gradient(to right, #3e2ab4, #87f0ff);
  border: 1px solid #b2b2b2;
  border-right-width: 0;
}

input[type='range'].styled-slider.slider-progress:hover::-ms-fill-lower {
  background: linear-gradient(to right, #3e2ab4, #87f0ff);
  border-color: #9a9a9a;
}

input[type='range'].styled-slider.slider-progress:active::-ms-fill-lower {
  background: linear-gradient(to right, #3e2ab4, #87f0ff);
  border-color: #c1c1c1;
}

